--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.9.1",
     "@types/node": "^14.14.6",
+    "@types/sharp": "^0.29.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
