--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/index.ts",
     "lint": "eslint 'index.ts'",
     "prettier": "prettier --config .prettierrc '*.ts' --write",
+    "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine"
   },
   "author": "Udacity",
